<resources>
    <string name="app_name">MoodTracker</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_talk">Talk</string>
    <string name="btn_talk">Dictate</string>

    <string name="title_track">Track</string>
    <string name="line_chart">Trend of My Mood</string>
    <string name="pie_chart">My Mood Distribution</string>
    <string name="word_cloudPos">Key for Positive Mood</string>
    <string name="word_cloudNeg">Key for Negative Mood</string>

    <string name="title_pref">User</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="go">Go</string>

</resources>