<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.moodtracker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_talk"
        android:name="com.example.moodtracker.ui.talk.TalkFragment"
        android:label="@string/title_talk"
        tools:layout="@layout/fragment_talk" />

    <fragment
        android:id="@+id/navigation_track"
        android:name="com.example.moodtracker.ui.track.TrackFragment"
        android:label="@string/title_pref"
        tools:layout="@layout/fragment_track" />

    <fragment
        android:id="@+id/navigation_pref"
        android:name="com.example.moodtracker.ui.pref.PrefFragment"
        android:label="@string/title_pref"
        tools:layout="@layout/fragment_pref" />


</navigation>