<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.anychart.AnyChartView
        android:id="@+id/chartView"
        ayout_constraintHorizontal_bias="0.0"
        layout_constraintLeft_toLeftOf="parent"
        layout_constraintStart_toStartOf="parent"
        layout_constraintTop_toTopOf="parent"
        android:layout_width="367dp"
        android:layout_height="601dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.anychart.AnyChartView>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/title_track"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edtDate"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002"
        app:srcCompat="@drawable/icons8_left_24" />

    <EditText
        android:id="@+id/edtDate"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="98dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/start_date"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edtDate2"
        app:layout_constraintEnd_toStartOf="@+id/edtDate2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtDate2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/end_date"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/chartView"
        app:layout_constraintEnd_toStartOf="@+id/btnDate"
        app:layout_constraintStart_toEndOf="@+id/edtDate"
        app:layout_constraintTop_toBottomOf="@+id/btnDate"
        app:layout_constraintVertical_bias="0.769" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="23dp"
        android:text="@string/go"
        app:layout_constraintBottom_toTopOf="@+id/chartView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtDate2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>